client/css/d3_styles.css
body {
}
.login-panel {
    margin-top: 25%;
}





/*--------------------------------------------*/
/*           CORE VIEW                        */
/*--------------------------------------------*/

.chromosome-tooltip {
    display:none;
    position:absolute;
    border:1px solid #333;
    background-color:#eeeeee;
    border-radius:5px;
    color:#fff;
}
.chromosome-name {
    color:black;
    font-family: sans-serif;
    font-size: 11px;
    font-weight:bold;
    margin-bottom: 0;
    margin-top: 0;
}



/*--------------------------------------------*/
/*           DATALINE 1                       */
/*--------------------------------------------*/

/* X AXIS */
.dl1.axis.x path,
.dl1.axis.x line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}
.dl1.axis.x text {
    font-family: sans-serif;
    font-size: 11px;
}

/* Y AXIS */
.dl1.axis.y path,
.dl1.axis.y line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}
.dl1.axis.y text {
    font-family: sans-serif;
    font-size: 11px;
}

/* SCALE TEXT */
.dl1.scale {
    font-family: sans-serif;
    font-size: 11px;
    fill: #999;

}

/* LINE */
.dl1.line {
    fill: none;
/*    stroke: steelblue;*/
    stroke-width: 1px;
}

.dl1.title {
/*    fill: steelblue;*/
    /*stroke: steelblue;
    stroke-width: 1px;*/
    font-family: sans-serif;
    font-size: 13px;
}

/* POINTS */
.dl1.point {
    fill:white;
    stroke:darkred;
}
.dl1.point.pressed {
    stroke: steelblue;
    r:5px;
    fill: darkred;
    stroke-width:2px;
}
.dl1.point:hover {
    stroke: steelblue;
    r:5px;
    fill: darkred;
    stroke-width:2px;
}
.dl1.point-tip {
    line-height: 1;
    padding: 3px;
    background: rgba(200, 200, 200, 0.8);
    border-radius: 2px;
    font-size: 10px;
    text-align: center;
}
.dl1.search-label{
    fill: darkred;
    font-family: sans-serif;
    font-size: 11px;
}
.dl1.export-label{
    fill: darkred;
    font-family: sans-serif;
    font-style: italic;
    font-size: 11px;
}

/* ONTOLOGY TERMS */
.dl1.goterm {
    font-family: sans-serif;
    fill: darkred;
}
.dl1.goterm.selected {
    font-family: sans-serif;
    fill: darkred;
    text-decoration: underline;
}
.dl1.goterm-tip{
    font-family: sans-serif;
    font-size: 10px;
    color: black;
    fill-opacity: .8;
    background: #FEE;
    border: 1px;
    border-radius: 3px;
    padding: 2px;
    text-align: center;
}
.dl1.gogene {
    stroke:darkred;
}

.dl1.band {
    stroke: #ffc477;
    stroke-opacity: 0.5;
    stroke-dasharray: "10,3";
    fill-opacity: 0.3;
    fill:none;
}

.dl1.band.letter {
    fill:black;
    font-family: sans-serif;
    font-size: 11px;
}

/*--------------------------------------------*/
/*           DATALINE 2                      */
/*--------------------------------------------*/

/* X AXIS */
.dl2.axis.x path,
.dl2.axis.x line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}
.dl2.axis.x text {
    font-family: sans-serif;
    font-size: 11px;
}

/* Y AXIS */
.dl2.axis.y path,
.dl2.axis.y line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}
.dl2.axis.y text {
    font-family: sans-serif;
    font-size: 11px;
}

/* SCALE TEXT */
.dl2.scale {
    font-family: sans-serif;
    font-size: 11px;
    fill: #999;
}

/* LINE */
.dl2.line {
    fill: none;
    stroke: steelblue;
    stroke-width: 1px;
}
.dl2.line.hl {
    fill: none;
    stroke: darkred;
    stroke-width: 2px;
}

.dl2.line.shadow {
    fill: #d1e0ff;
    stroke: #d1e0ff;
    stroke-width: 1px;
    fill-opacity: .5;

}

/* GENE ANNOTATIONS */
.dl2.annotation{
    fill: #BFB;
    fill-opacity: 1;
}
.dl2.annotation.label{
    fill: #111;
    font-family: sans-serif;
    font-size: 11px;
}
.dl2.annotation.arrow{
    fill-opacity: 1;
}
.dl2.annotation.cracker{
    fill: none;
    stroke: #FFF;
    stroke-width: 1px;
}
.dl2.annotation.tip{
    font-family: sans-serif;
    font-size: 10px;
    color: #666;
    fill-opacity: 1;
    background: #BFB;
    border: 1px;
    border-radius: 3px;
    padding: 2px;
    text-align: left;
    vertical-aling: text-bottom;
}

/* BRACKETS */
.dl2.bracket{
    fill: none;
    stroke: black;
}



/*--------------------------------------------*/
/*      NUCLEOTIDES (DATALINE 3)              */
/*--------------------------------------------*/


/* X AXIS */
.dl3.axis.y.text {
    font-family: sans-serif;
    font-size: 9px;
}

/* SCALE TEXT */
.dl3.scale {
    font-family: sans-serif;
    font-size: 11px;
    fill: #999;
}

/* NUCLEOTIDE TEXT */
.dl3.text {
    font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
    font-size: 12px;
}
.dl3.consensus {
    font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
    font-size: 12px;
}

/* BRACKETS */
.dl3.bracket{
    fill: none;
    stroke: black;
}

